syntax = "proto3";
package types;

message PreCommitReq{
    uint64 SecSize = 1;
    uint64 SecID = 2;
    bytes ProverID = 3;
    bytes Tickets = 4;
    repeated PublicPieceInfo PubInfo = 5;
}
message PublicPieceInfo{
    uint64 Size = 1;
    bytes CommP = 2;
}
message PreCommitRes{
}
message SealCommitReq{
    uint64 SecSize = 1;
    uint64 SecID = 2;
    bytes ProverID = 3;
    bytes Tickets = 4;
    repeated PublicPieceInfo PubInfo = 5;
    repeated PreResultReq RawCommit = 6;
}
message SealCommitRes{

}

message GenPoStReq{
    bytes Ip = 1;
    bytes Seed = 2;
}
message GenPoStRes{

}

message PieceMeta{
    string Key = 1;
    uint64 Size = 2;
    bytes InclusionProof = 3;
    bytes CommP =4;
}

message CandidatesReq{
    uint64 SecSize = 1;
    bytes ProverID = 2;
    bytes Randomness = 3;
    uint64 ClgCount = 4;
}

message CandidatesRes{
    bool Got = 1;
}

message PreResultReq{
    bytes CommC = 1;
    bytes CommD = 2;
    bytes CommR = 3;
    bytes CommRLast = 4;
}
message PreResultRes{
    bool Got = 1;
}
message SealResultReq{
    bytes Proof = 1;
}
message SealResultRes{
    bool Got = 1;
}
message CanResultReq{
    uint64 SecID = 1;
    bytes ParTicket = 2;
    bytes Ticket = 3;
    uint64 SecChaIndex = 4;
}
message CanResultRes{
    bool Got = 1;
}

message PoStResultReq{
    uint32 MachineID = 1;
    bytes Proof = 2;
}
message PoStResultRes{
    bool Got = 1;
}